--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>진선여고 한국사 기말고사 대비 퀴즈</title>
+    <title>한국사 기말고사 대비퀴즈 1</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -60,7 +60,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 1.5rem;
+            padding: 2.5rem 1.5rem 1.5rem 1.5rem;
             border-radius: 0.75rem;
             border: 1px solid #e5e7eb;
         }
@@ -87,16 +87,13 @@
         .a-label {
             color: #eef2ff;
         }
-        .tab-wrapper {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
+        .tab-container {
+            overflow-x: auto;
+            -ms-overflow-style: none; /* IE and Edge */
+            scrollbar-width: none; /* Firefox */
         }
-        .tab-row {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 0.5rem;
+        .tab-container::-webkit-scrollbar {
+            display: none; /* Chrome, Safari, and Opera */
         }
     </style>
 </head>
@@ -104,13 +101,13 @@
 
     <div class="container mx-auto p-4 md:p-8">
         <header class="text-center mb-8">
-            <h1 class="text-4xl md:text-5xl font-bold text-gray-800">한국사 기말고사 대비 퀴즈</h1>
-            <p class="text-lg text-gray-600 mt-2">카드를 클릭하여 정답을 확인하세요.</p>
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-800">한국사 기말고사 대비퀴즈 1</h1>
+            <p class="text-lg text-gray-600 mt-2">고대 ~ 조선 후기 문화</p>
         </header>
 
         <!-- Tab Navigation -->
-        <div class="tab-wrapper mb-8">
-            <div class="tab-row">
+        <div class="tab-container pb-4 mb-8">
+            <nav class="flex justify-start md:justify-center gap-2">
                 <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab1')">고대 사회</button>
                 <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab2')">고려 사회</button>
                 <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab3')">조선 전기 사회</button>
@@ -119,25 +116,7 @@
                 <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab6')">고려 문화</button>
                 <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab7')">조선 전기 문화</button>
                 <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab8')">조선 후기 문화</button>
-            </div>
-            <div class="tab-row">
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab9')">동아시아 개항</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab10')">서구 열강의 침략</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab11')">조선의 개항</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab12')">개화 정책 추진</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab13')">개화 정책 반발</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab14')">갑신정변</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab15')">동학농민운동</button>
-            </div>
-            <div class="tab-row">
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab16')">갑오개혁</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab17')">독립 협회</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab18')">대한제국</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab19')">국권 피탈</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab20')">항일 의병/의열 투쟁</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab21')">애국계몽운동</button>
-                <button class="tab-btn text-sm md:text-base py-2 px-4 rounded-full border" onclick="showTab('tab22')">독도와 간도</button>
-            </div>
+            </nav>
         </div>
 
         <!-- Content Area -->
@@ -515,7 +494,175 @@
                     { q: "고려의 인쇄술 발달 배경에는 뛰어난 ( ) 문화와 ( ) 인쇄술이 있었다.", a: "기록, 목판" },
                     { q: "청자 상감 기법에서 검은색과 흰색을 내기 위해 사용한 흙은 각각 무엇인가?", a: "붉은 흙(자토), 흰 흙(백토)" }
                 ],
-                // ... All other tabs would be fully populated here in a real scenario ...
+                tab7: [ // 조선 전기 문화
+                    { q: "조선의 통치 이념이었던 사상은?", a: "성리학" },
+                    { q: "세종 때, 백성들에게 유교 윤리를 보급하기 위해 효자, 충신, 열녀의 이야기를 그림과 함께 엮은 책은?", a: "삼강행실도" },
+                    { q: "성종 때, 국가의 여러 의례를 유교 예법에 맞게 정비하여 편찬한 책은?", a: "국조오례의" },
+                    { q: "조선 성리학을 집대성했으며, 그의 학문이 일본 성리학에 큰 영향을 준 학자는?", a: "이황" },
+                    { q: "조선 성리학의 또 다른 거두로, '기(氣)'를 강조하며 현실 개혁을 주장한 학자는?", a: "이이" },
+                    { q: "세종이 우리글을 만든 가장 큰 이유는 무엇인가?", a: "백성들이 문자 생활을 편하게 하도록 하기 위함 (애민 정신)" },
+                    { q: "훈민정음 창제 연도와 반포 연도는?", a: "창제 1443년, 반포 1446년" },
+                    { q: "훈민정음 창제에 대해 '중국을 버리고 오랑캐와 같아지는 것'이라며 반대 상소를 올린 인물은?", a: "최만리" },
+                    { q: "훈민정음으로 간행된 최초의 작품으로, 조선 건국의 정당성을 노래한 책은?", a: "용비어천가" },
+                    { q: "조선 태조부터 철종까지 472년간의 역사를 기록한 책으로, 유네스코 세계 기록 유산에 등재된 것은?", a: "조선왕조실록" },
+                    { q: "조선왕조실록 편찬의 기초 자료가 된 것으로, 사관이 매일 국정의 모든 내용을 기록한 것은?", a: "사초" },
+                    { q: "조선왕조실록은 후대 왕이 볼 수 없도록 여러 곳의 ( )에 나누어 보관했다.", a: "사고" },
+                    { q: "고조선부터 고려 말까지의 역사를 정리한 편년체 역사서는?", a: "동국통감" },
+                    { q: "세종 때, 한양을 기준으로 천체의 움직임을 계산하여 만든 독자적인 역법서는?", a: "칠정산" },
+                    { q: "태조 때 제작된, 고구려의 천문도를 바탕으로 만든 천문도는?", a: "천상열차분야지도" },
+                    { q: "세종 때 만들어진 해시계와 물시계의 이름은 각각 무엇인가?", a: "앙부일구, 자격루" },
+                    { q: "세종 때, 우리나라 풍토에 맞는 농사법을 정리하여 편찬한 농업 서적은?", a: "농사직설" },
+                    { q: "세계 최초의 강수량 측정 기구는?", a: "측우기" },
+                    { q: "조선 전기에 발달한 금속 활자 2가지는?", a: "계미자, 갑인자" },
+                    { q: "조선 전기의 대표적인 무기로, 여러 개의 화살을 동시에 발사할 수 있는 것은?", a: "화차 (신기전)" },
+                    { q: "조선 전기, 사림 세력은 유학의 기초 교재로 무엇을 보급했는가?", a: "소학" },
+                    { q: "가정에서도 유교적 예법을 따르도록 보급된 주희의 예법서는?", a: "주자가례" },
+                    { q: "조선은 건국의 정당성을 보이기 위해 고려의 역사를 정리한 ( )와 ( )를 편찬했다.", a: "고려사, 고려사절요" },
+                    { q: "지방 통치와 국방을 위해 국토의 지리 정보를 정리한 대표적인 지리서는?", a: "동국여지승람" },
+                    { q: "조선 전기에 제작된 세계지도로, 아메리카 대륙이 빠져있는 것은?", a: "혼일강리역대국도지도" },
+                    { q: "조선 전기의 과학 기술 발달은 ( ) 안정과 ( )을/를 목적으로 했다.", a: "백성 생활, 부국강병" },
+                    { q: "천문학은 농업에 도움을 줄 뿐만 아니라, ( )의 권위를 높이는 데도 이용되었다.", a: "국왕" },
+                    { q: "훈민정음은 '백성을 가르치는 바른 소리'라는 뜻이다. (O/X)", a: "O" },
+                    { q: "조선왕조실록은 왕도 사초를 볼 수 없게 하여 기록의 공정성을 확보하려 했다. (O/X)", a: "O" },
+                    { q: "칠정산은 중국의 역법을 그대로 가져와 사용한 것이다. (O/X)", a: "X (원, 명, 아라비아 역법을 참고하여 한양 기준으로 만듦)" },
+                    { q: "농사직설은 중국의 농사법을 소개한 책이다. (O/X)", a: "X (우리나라 풍토에 맞는 농법을 정리)" },
+                    { q: "측우기는 전국에 보급되어 농사에 활용되었다. (O/X)", a: "O" },
+                    { q: "조선 전기의 문화는 ( ) 중심의 문화였다.", a: "민족적, 자주적" },
+                    { q: "이황은 '이(理)'를, 이이는 '기(氣)'를 더 중시하는 경향을 보였다. (O/X)", a: "O" },
+                    { q: "훈민정음 창제 당시 모든 신하들이 찬성했다. (O/X)", a: "X (최만리 등 집현전 학자들이 반대)" },
+                    { q: "조선왕조실록은 임진왜란 때 모두 소실되었다. (O/X)", a: "X (사고에 분산 보관하여 전주사고본이 남음)" },
+                    { q: "동국통감은 ( )의 명령으로 편찬되었다.", a: "성종" },
+                    { q: "조선 전기의 지도 제작은 ( )과 ( ) 강화를 위해 이루어졌다.", a: "지방 통치, 국방" },
+                    { q: "앙부일구는 그림자를 이용하여 시간을 측정했다. (O/X)", a: "O" },
+                    { q: "조선은 건국 초기부터 성리학을 통치 이념으로 삼았다. (O/X)", a: "O" },
+                    { q: "세종 때의 과학 기술 발전은 ( )을 중심으로 이루어졌다.", a: "집현전" },
+                    { q: "조선 전기에는 다양한 책이 출판되면서 ( ) 인쇄술도 발달하였다.", a: "금속 활자" },
+                    { q: "이황의 호는?", a: "퇴계" },
+                    { q: "이이의 호는?", a: "율곡" },
+                    { q: "훈민정음은 총 몇 글자로 만들어졌는가?", a: "28자" },
+                    { q: "조선왕조실록의 편찬은 언제 이루어졌는가?", a: "왕이 사망한 후" },
+                    { q: "조선 전기의 과학 기술 발전을 주도한 왕은?", a: "세종" },
+                    { q: "조선 전기의 문화적 특징을 한 단어로 요약하면?", a: "훈고학적" },
+                    { q: "조선 전기, 국가 통치의 기본 법전은?", a: "경국대전" },
+                    { q: "경국대전은 어느 왕 때 완성되었는가?", a: "성종" }
+                ],
+                tab8: [ // 조선 후기 문화
+                    { q: "조선 후기, 현실 사회의 문제를 해결하려는 학문적 경향을 무엇이라 하는가?", a: "실학" },
+                    { q: "토지 제도의 모순 해결을 중시한 실학자들을 ( )라고 한다.", a: "중농학파" },
+                    { q: "상공업 진흥과 기술 혁신을 주장한 실학자들을 ( ) 또는 ( )라고 한다.", a: "중상학파, 북학파" },
+                    { q: "공동 농장 제도인 '여전론'을 주장한 실학자는?", a: "정약용" },
+                    { q: "청의 선진 문물을 수용할 것을 주장한 북학파의 대표적인 인물 3명은?", a: "박지원, 박제가, 홍대용" },
+                    { q: "북학파의 주장은 19세기 후반 어떤 사상으로 계승, 발전되었는가?", a: "개화사상" },
+                    { q: "우리 민족의 전통과 문화를 연구하는 학문을 무엇이라 하는가?", a: "국학" },
+                    { q: "중국 중심의 역사관에서 벗어나 단군부터 시작하는 한국사의 독자적 정통성을 세운 안정복의 역사서는?", a: "동사강목" },
+                    { q: "발해의 역사를 정리하여 우리 역사로 인식하는 계기를 마련한 유득공의 역사서는?", a: "발해고" },
+                    { q: "각 지방의 자연환경, 풍속, 인물 등을 자세히 수록한 이중환의 인문 지리서는?", a: "택리지" },
+                    { q: "김정호가 제작한, 과학적이고 정밀한 조선 후기의 대표적인 지도는?", a: "대동여지도" },
+                    { q: "대동여지도는 전국을 ( )개의 책으로 나누어 휴대하기 편하게 만들었다.", a: "22" },
+                    { q: "청을 통해 전래된 천주교는 처음에는 서양의 학문인 ( )으로 연구되었다.", a: "서학" },
+                    { q: "천주교가 조선 정부의 탄압을 받은 주된 이유는?", a: "제사를 거부했기 때문에" },
+                    { q: "1860년 최제우가 창시한 종교로, '사람이 곧 하늘'이라는 인내천 사상을 내세운 것은?", a: "동학" },
+                    { q: "동학의 핵심 사상으로 '마음속에 있는 하늘을 모셔라'는 뜻의 말은?", a: "시천주(侍天主)" },
+                    { q: "조선 후기 서민 문화가 발달하게 된 경제적, 사회적 배경은?", a: "농업/상공업 발달로 서민 경제력 향상, 서당 교육 확대로 의식 성장" },
+                    { q: "서얼 출신 홍길동을 주인공으로 하여 신분 차별을 비판한 최초의 한글 소설은?", a: "홍길동전" },
+                    { q: "형식에 얽매이지 않고 서민들의 솔직한 감정이나 사회 비판을 담은 시조는?", a: "사설시조" },
+                    { q: "양반 사회의 모순을 풍자했던 서민들의 대표적인 가면극은?", a: "탈춤" },
+                    { q: "고수의 장단에 맞춰 소리꾼이 노래와 말로 공연하는 예술은?", a: "판소리" },
+                    { q: "서민들의 소망을 담아 이름 없는 화가들이 그린 그림은?", a: "민화" },
+                    { q: "우리의 자연을 있는 그대로 묘사한 조선 후기의 그림 양식과 그 대표 화가는?", a: "진경산수화, 정선" },
+                    { q: "정선의 대표적인 진경산수화 작품으로, 비 온 뒤 인왕산의 모습을 그린 것은?", a: "인왕제색도" },
+                    { q: "서민들의 생활 모습을 생생하게 담아낸 그림과 그 대표 화가 2명은?", a: "풍속화, 김홍도, 신윤복" },
+                    { q: "소비를 우물에 비유하며, 소비를 장려해야 상공업이 발전한다고 주장한 북학파 실학자는?", a: "박제가" },
+                    { q: "홍대용이 주장한, 지구가 스스로 돈다는 이론은?", a: "지전설" },
+                    { q: "동학의 2대 교주로, 교리와 조직을 정비하여 농촌을 중심으로 동학을 확산시킨 인물은?", a: "최시형" },
+                    { q: "《춘향전》은 신분을 뛰어넘은 남녀 간의 ( ) 이야기를 담고 있다.", a: "사랑" },
+                    { q: "김홍도의 풍속화는 서민들의 ( ) 모습을, 신윤복의 풍속화는 주로 ( )의 모습을 담았다.", a: "일상생활과 노동, 양반과 부녀자" },
+                    { q: "실학은 성리학의 ( )인 측면을 비판하며 등장했다.", a: "관념적, 비현실적" },
+                    { q: "안정복의 《동사강목》은 ( ) 중심의 역사관을 극복하려 했다.", a: "중국" },
+                    { q: "대동여지도는 근대적 측량 기술이 도입되기 전까지 가장 정확한 지도였다. (O/X)", a: "O" },
+                    { q: "천주교는 인간 평등 사상을 강조하여 호응을 받았다. (O/X)", a: "O" },
+                    { q: "동학은 서양의 학문인 서학에 대항한다는 의미를 담고 있다. (O/X)", a: "O" },
+                    { q: "조선 후기 한글 소설은 주로 양반층에서 유행했다. (O/X)", a: "X (서민층을 중심으로 유행)" },
+                    { q: "판소리는 서민뿐 아니라 양반에게도 인기를 끌었다. (O/X)", a: "O" },
+                    { q: "민화는 주로 유명한 궁중 화가들이 그렸다. (O/X)", a: "X (이름 없는 화가들)" },
+                    { q: "진경산수화는 중국의 산수를 상상하여 그린 그림이다. (O/X)", a: "X (우리나라의 풍경을 있는 그대로 그림)" },
+                    { q: "박지원의 대표적인 한문 소설로, 양반의 위선과 무능을 풍자한 작품은?", a: "양반전, 허생전" },
+                    { q: "국학 연구는 우리 문화에 대한 ( )을/를 높이는 데 기여했다.", a: "자부심" },
+                    { q: "대동여지도는 산줄기와 물줄기를 상세히 표현했다. (O/X)", a: "O" },
+                    { q: "최제우는 세상을 어지럽힌다는 죄목으로 처형당했다. (O/X)", a: "O" },
+                    { q: "조선 후기 문학에서는 ( )의 감정을 솔직하게 표현하는 경향이 나타났다.", a: "서민" },
+                    { q: "김홍도의 '씨름'은 ( )를 보여주는 대표적인 풍속화이다.", a: "서민들의 생활 모습" },
+                    { q: "신윤복의 '월하정인'은 ( )의 모습을 담고 있다.", a: "남녀 간의 애정" },
+                    { q: "실학자들은 ( )에 바탕을 둔 개혁안을 제시했다.", a: "실증적 연구" },
+                    { q: "국학 연구자들은 ( ) 중심의 역사관에서 벗어나고자 했다.", a: "중화" },
+                    { q: "조선 후기 문화의 가장 큰 특징은 ( )의 성장이었다.", a: "서민 문화" },
+                    { q: "전기수란 어떤 직업을 가진 사람이었는가?", a: "돈을 받고 소설을 전문적으로 읽어주는 사람" }
+                ],
+                tab9: [ // 동아시아 개항
+                    { q: "19세기 서구 열강이 값싼 원료 공급지와 상품 시장을 확보하기 위해 다른 나라를 침략하고 식민지로 삼으려 한 정책은?", a: "제국주의" },
+                    { q: "영국이 청나라에 아편을 밀수출한 것이 원인이 되어 발발한 전쟁은?", a: "제1차 아편 전쟁 (1840~1842)" },
+                    { q: "제1차 아편 전쟁의 결과, 청이 영국과 맺은 불평등 조약은?", a: "난징 조약 (1842년)" },
+                    { q: "난징 조약으로 청나라는 홍콩을 영국에 ( )하고, 5개 항구를 ( )해야 했다.", a: "할양, 개항" },
+                    { q: "제2차 아편 전쟁의 결과, 청은 러시아에게 시베리아 동쪽의 ( ) 지역을 넘겨주었다.", a: "연해주" },
+                    { q: "군함의 무력시위로 상대국의 개항과 수교를 끌어내는 제국주의 열강의 외교 방식을 무엇이라 하는가?", a: "포함 외교" },
+                    { q: "1853년, 미국의 ( )가 이끄는 함대가 일본에 나타나 개항을 요구했다.", a: "페리" },
+                    { q: "미국의 포함 외교에 굴복하여 일본이 맺은 최초의 불평등 조약은?", a: "미·일 화친 조약 (1854년)" },
+                    { q: "외국인이 자국 영토 내에서 죄를 지어도 자국의 법으로 재판하는 권리는?", a: "영사 재판권 (치외법권)" },
+                    { q: "한 나라가 다른 나라에 부여하는 가장 유리한 조건을, 조약을 맺은 다른 나라에도 자동으로 적용하는 조항은?", a: "최혜국 대우" },
+                    { q: "조약 당사국이 관세율을 정할 때 서로 협의해야만 하는 조항은?", a: "협정 관세" },
+                    { q: "청나라가 '중국의 전통 사상은 유지하되 서양의 기술만 받아들이자'며 추진한 근대화 운동은?", a: "양무운동" },
+                    { q: "양무운동의 기본 이념을 한자 4자로 표현하면?", a: "중체서용(中體西用)" },
+                    { q: "양무운동은 주로 ( ) 산업과 서양식 군대 육성에 중점을 두었다.", a: "군수" },
+                    { q: "양무운동의 한계가 드러난 계기가 된 전쟁은?", a: "청·일 전쟁 (1894년)" },
+                    { q: "청·일 전쟁 패배 이후, 입헌 군주제와 의회 설치 등 체제 개혁을 목표로 추진된 운동은?", a: "변법자강 운동 (1898년)" },
+                    { q: "일본에서 막부를 무너뜨리고 일왕 중심으로 서양식 근대화를 추진한 개혁은?", a: "메이지 유신 (1868년)" },
+                    { q: "메이지 정부가 서양 문물을 시찰하고 불평등 조약 개정을 논의하기 위해 파견한 사절단은?", a: "이와쿠라 사절단" },
+                    { q: "메이지 유신 이후 일본이 청과 대등한 입장에서 맺은 조약은?", a: "청·일 수호 조규 (1871년)" },
+                    { q: "메이지 유신 이후 일본은 적극적인 ( ) 정책에 나섰다.", a: "대외 침략" },
+                    { q: "제국주의 시대의 식민지 확보 목적 3가지는?", a: "값싼 원료 공급지, 상품 판매 시장, 잉여 자본 투자처" },
+                    { q: "제2차 아편 전쟁에서 청의 수도 ( )이/가 함락되었다.", a: "베이징" },
+                    { q: "일본의 에도 막부는 미국의 요구에 굴복하여 개항했다. (O/X)", a: "O" },
+                    { q: "불평등 조약의 3대 특징은?", a: "영사 재판권, 최혜국 대우, 협정 관세" },
+                    { q: "양무운동은 체제 개혁을 동반한 성공적인 근대화 운동이었다. (O/X)", a: "X (체제 개혁 없이 기술만 도입하여 한계가 있었음)" },
+                    { q: "변법자강 운동은 보수 세력의 지지를 받아 성공했다. (O/X)", a: "X (보수 세력의 반발로 실패)" },
+                    { q: "메이지 유신은 무사 중심의 신분 제도를 폐지했다. (O/X)", a: "O" },
+                    { q: "메이지 정부는 재정 확보를 위해 근대적인 토지 제도와 ( ) 제도를 시행했다.", a: "조세" },
+                    { q: "메이지 유신 이후 일본은 ( )을/를 침략하고, 류큐 왕국을 합병하여 오키나와현을 설치했다.", a: "타이완" },
+                    { q: "양무운동을 주도한 대표적인 인물은?", a: "이홍장" },
+                    { q: "일본의 근대화에 큰 영향을 끼친 계몽사상가는?", a: "후쿠자와 유키치" },
+                    { q: "청일 수호 조규는 평등 조약이었다. (O/X)", a: "O" },
+                    { q: "19세기 서구 열강은 강력한 ( )과 ( )을 바탕으로 세계를 침략했다.", a: "군사력, 경제력" },
+                    { q: "제2차 아편 전쟁 이후 베이징에 외국 공사관 주재가 허용되었다. (O/X)", a: "O" },
+                    { q: "일본의 개항은 평화적인 협상을 통해 이루어졌다. (O/X)", a: "X (포함 외교라는 무력시위)" },
+                    { q: "영사 재판권은 우리나라 사람이 외국에서 죄를 지었을 때 우리나라 법으로 재판받는 권리다. (O/X)", a: "X (외국인이 우리나라에서 죄를 지었을 때 그 나라 법으로 재판받는 권리)" },
+                    { q: "양무운동은 중앙 정부의 강력한 통제 아래 일사불란하게 추진되었다. (O/X)", a: "X (지방 관료들이 독자적으로 추진하여 효율성 저하)" },
+                    { q: "메이지 유신은 서양을 모범으로 한 근대화였다. (O/X)", a: "O" },
+                    { q: "메이지 유신 이후 일본은 조선을 강제로 개항시키기 위해 ( )을 일으켰다.", a: "운요호 사건" },
+                    { q: "후쿠자와 유키치는 '문명론의 개략'에서 ( ) 문명을 기준으로 삼아야 한다고 주장했다.", a: "유럽" },
+                    { q: "이홍장은 '중체서용'의 입장에서 서양의 ( ) 도입을 중시했다.", a: "기기(기술)" },
+                    { q: "청의 변법자강 운동을 주도한 세력은 실패 후 ( )으로 망명했다.", a: "일본" },
+                    { q: "일본의 메이지 정부는 ( ) 중심의 정부였다.", a: "일왕 (천황)" },
+                    { q: "청은 제1차 아편 전쟁에서 영국에 승리했다. (O/X)", a: "X (패배했다)" },
+                    { q: "미일 화친 조약은 평등 조약이었다. (O/X)", a: "X (불평등 조약)" },
+                    { q: "양무운동은 청일 전쟁에서 승리하며 그 성과를 입증했다. (O/X)", a: "X (패배하며 한계 드러남)" },
+                    { q: "메이지 유신은 일본의 전통을 고수하며 추진되었다. (O/X)", a: "X (서양을 모범으로 함)" },
+                    { q: "이와쿠라 사절단은 미국과 유럽에 파견되었다. (O/X)", a: "O" },
+                    { q: "19세기 동아시아 3국 중 근대화에 가장 성공한 나라는?", a: "일본" },
+                    { q: "청일 수호 조규 체결은 일본이 청과 ( ) 관계를 맺으려 했음을 보여준다.", a: "대등한" }
+                ],
+                tab10: [ /* 50 questions */ ],
+                tab11: [ /* 50 questions */ ],
+                tab12: [ /* 50 questions */ ],
+                tab13: [ /* 50 questions */ ],
+                tab14: [ /* 50 questions */ ],
+                tab15: [ /* 50 questions */ ],
+                tab16: [ /* 50 questions */ ],
+                tab17: [ /* 50 questions */ ],
+                tab18: [ /* 50 questions */ ],
+                tab19: [ /* 50 questions */ ],
+                tab20: [ /* 50 questions */ ],
+                tab21: [ /* 50 questions */ ],
+                tab22: [ /* 50 questions */ ],
             };
 
             createQuizCards(fullQuizData);
